src/snapshots/afrotd__parser__tests__rule_html_2.27.13.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.27.13 Teamangehörige und Teammitglieder
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Teammitglied ist Teil einer Gruppe von potentiellen
                Spielern in Ausrüstung, das zur Spielteilnahme bei einem
                Footballspiel bestimmt ist. Ein Mitspieler ist ein Teammitglied
                eines Teams, welches sich während eines Downs auf dem Feld
                befindet. Alle anderen Personen sind Teamangehörige, wenn sie
                sich in einer Teamzone aufhalten.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.27.13"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
