src/snapshots/afrotd__parser__tests__rule_html_2.27.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.27.2 Offense und Defense
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Das angreifende Team (Offense) ist das ballbesitzende Team bzw.
                das Team, zu dem der Ball gehört. Das gegnerische Team ist das
                verteidigende Team (Defense).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.27.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
