src/snapshots/afrotd__parser__tests__rule_html_2.27.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.27.3 Kicker und Holder
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Der Kicker ist jeder Spieler, der gemäß den Regeln einen
                Punt, Drop Kick oder Place Kick durchführt. Er bleibt solange
                der Kicker, bis er genügend Zeit hat, seine Balance
                wiederzuerlangen.
                </li>
                <li>Der Holder ist ein Spieler, der den Ball auf dem Boden oder
                auf einem Kicking Tee kontrolliert. Während eines Scrimmage
                Kick-Spieles bleibt er solange ein Holder, bis sich kein
                Spieler in Position befindet, einen Kick auszuführen oder,
                falls der Ball gekickt wurde, bis der Kicker ausreichend Zeit
                hatte, seine Balance wiederzuerlangen.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.27.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
