src/snapshots/afrotd__parser__tests__rule_html_2.27.5.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.27.5 Passer
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Passer ist jeder Spieler, der einen Vorwärtspass wirft. Er ist
                ein Passer von dem Moment, an dem er den Ball loslässt, bis der
                Pass vollständig, unvollständig oder abgefangen wird oder er am
                Spiel teilnimmt.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.27.5"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
