src/snapshots/afrotd__parser__tests__rule_html_2.27.8.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.27.8 Snapper
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Snapper ist der Spieler, der den Snap durchführt. Er wird
                zum Snapper, wenn er seine Position hinter dem Ball einnimmt
                und den Ball berührt oder das Berühren vortäuscht (Hand/Hände
                an oder unterhalb seiner Knie) (Regel 7.1.3).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.27.8"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
